ArgoRollout/example1.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: tu-argorollout
spec:
  selector:
    matchLabels:
      app: tu-aplicacion
  strategy:
    blueGreen:
      activeService: tu-aplicacion
      previewService: tu-aplicacion-preview
      autoPromotionEnabled: false
      prePromotionAnalysis:
        templates:
        - templateName: pre-promotion-check
          metadata:
            name: pre-promotion-check
          spec:
            containers:
            - name: pre-promotion-check
              image: your-pre-promotion-image
      postPromotionAnalysis:
        templates:
        - templateName: post-promotion-check
          metadata:
            name: post-promotion-check
          spec:
            containers:
            - name: post-promotion-check
              image: your-post-promotion-image
      weights:
        activeService: 90
        previewService: 10
  template:
    metadata:
      labels:
        app: tu-aplicacion
      annotations:
        argo-rollouts.argoproj.io/instance-id: tu-argorollout
    spec:
      containers:
      - name: tu-aplicacion
        image: tu-imagen:versión-v2
        ports:
        - containerPort: 80
