ArgoRollout/canary-preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo-preview
  namespace: rollout
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  # ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /preview
        pathType: Prefix
        backend:
          service:
            name: canary-demo-preview
            port:
              name: http
